# Boot-Py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCA_PT_BR.md  README.md  RELEASE.md  backup_bot.py  config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: EXEMPLOS_PRATICOS.md  PADRAO_COMMITS_PT_BR.md
documents/: example1.txt  example2.txt
tests/: test_backup_bot.py
