[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backup-bot-py"
version = "1.1.0"
description = "Bot de backup automatizado com agendamento, retencao e upload opcional para S3"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Mantenedores Boot-Py" }
]
dependencies = [
  "schedule>=1.2.0,<2.0.0",
  "boto3>=1.34.34,<2.0.0"
]

[project.scripts]
backup-bot = "backup_bot:main"

[tool.setuptools]
py-modules = ["backup_bot"]
